# Moveworks-yaml-wizard

./: CHANGELOG.md  LICENSE  MANIFEST.in  PHASE5_IMPLEMENTATION_COMPLETE.md  Project_plan.txt  README.md  check_autofill.py  license_analysis  license_analysis.yaml  license_analysis_fixed  license_analysis_fixed.yaml  main.py  pyproject.toml  quick_test.py  requirements.txt  run_gui_with_autofill.py  setup.py  test_complete_workflow.py  test_dialog_layout.py  test_gui.py  test_gui_autofill.py  test_json_selection.py  test_license.json  test_license_json.py  test_yaml_fix.py  test_yaml_simple.py  test_yaml_special_chars.py  validate_yaml_output.py
docs/: API_Documentation.md  Architecture_Guide.md  Deployment_Guide.md  GUI_Implementation_Summary.md  JSON_Analysis_Feature.md  Moveworks Compound Actions Explained.md  Phase1_Analysis.md  Phase1_Completion_Summary.md  Phase2_Completion_Summary.md  Phase3_Completion_Report.md  Phase4_Completion_Summary.md  Phase5_Completion_Summary.md  User_Guide.md  compound-action-syntax-reference.md  moveworks-bender-language-reference.md
examples/: README.md  __init__.py  comprehensive_test.json  phase2_demo.py  sample_http_response.json  test_compound_action.py
src/moveworks_wizard/: __init__.py
src/moveworks_wizard/ai/: __init__.py  action_suggester.py
src/moveworks_wizard/catalog/: __init__.py  builtin_actions.py
src/moveworks_wizard/gui/: main_window.py
src/moveworks_wizard/models/: __init__.py  actions.py  base.py  common.py  control_flow.py  terminal.py
src/moveworks_wizard/serializers/: yaml_serializer.py
src/moveworks_wizard/utils/: __init__.py  json_analyzer.py
src/moveworks_wizard/wizard/: cli.py  prompts.py
src/moveworks_yaml_wizard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_json_analyzer.py  test_models.py  test_phase2_enhancements.py  test_phase3_integration.py  test_phase3_validation.py  test_phase3_wizard_flows.py  test_phase3_yaml_compliance.py  test_phase4_features.py  test_phase5_comprehensive.py
